manifests.old/k8up/resources/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: k8up
  namespace: k8up
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: k8up
  ingress:
  # Prometheus
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": prometheus
        app.kubernetes.io/name: prometheus
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
  egress:
  # Kubernetes API
  - toEntities:
    - kube-apiserver
